-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8, 6.9, 6.10
-
None
-
4e5446e28 (dev), f32bf6639 (6.9), 195fb35c3 (tqtc/lts-6.8)
Surface graphs draw exactly double the triangles it would need for rendering.
Here verts up to the 2209th are not used.
For Gerrit Dashboard: QTBUG-136631 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
643711,2 | Reserve instead of resize index list in surface graphs | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
644123,2 | Reserve instead of resize index list in surface graphs | 6.9 | qt/qtgraphs | Status: MERGED | +2 | 0 |
644255,2 | Reserve instead of resize index list in surface graphs | tqtc/lts-6.8 | qt/tqtc-qtgraphs | Status: MERGED | +2 | 0 |