Reserve instead of resize index list in surface graphs

Fixes: QTBUG-136631
Change-Id: I8d33b5c04ecd15eec79e28a56162dcc8e2b7ee9f
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 4e5446e282c07c3cd8bc8ce155cb9ace449711a3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit f32bf6639a0874f0c2ea49f3571de8e4ade7d36d)